--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
+
+/* Importing Bootstrap SCSS file. */
+@import 'bootstrap/scss/bootstrap';
+body {
+  font-family: 'Space Mono';
+  src: url('./assets/fonts/SpaceMono-Bold.ttf');
+  overflow-x: hidden;
+}
